# backend

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/user/: crud.py  model.py  router.py  schema.py  user_crud.py  user_model.py  user_router.py
docker/: docker-compose.yml  init.sql
migrations/: env.py
migrations/versions/: c2781e20d0bd_.py
