[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kimzerovirus <zerovirus96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

